--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -15,7 +15,7 @@
         <div class="header">
             <h1>
                 {% if request.user == user %}
-                    <a href="{% url 'accounts:edit_profile' %}"><i class="far fa-edit"></i></a>
+                    <a href="{% url 'accounts:edit_profile' %}" class="nounderline"><i class="far fa-edit"></i></a>
                 {% endif %}
                 {{ user.username }}
             </h1>
@@ -25,7 +25,7 @@
         <div class="header">
             <h1>
                 {% if request.user == user %}
-                    <a href="{% url 'accounts:edit_profile' %}"><i class="far fa-edit"></i></a>
+                    <a href="{% url 'accounts:edit_profile' %}" class="nounderline"><i class="far fa-edit"></i></a>
                 {% endif %}
                 {{ user.username }} - {{ user.points }}<span class="lowercase">p</span>
             </h1>
