--- a/fadderanmalan/static/sass/components/filter_checkbox.sass
+++ b/fadderanmalan/static/sass/components/filter_checkbox.sass
@@ -1,4 +1,5 @@
 @import m_filter_checkbox
+@import d_filter_checkbox
 
 .filter-checkbox-wrapper
     position: relative
@@ -29,6 +30,7 @@ body:not(.mobile)
     height: 100%
     transition: left .1s ease-in, width .05s linear, background-color .1s linear, opacity .1s linear
     width: 52px
+    background-color: #222
     left: 0
     opacity: 0
     &.noanimate
