--- a/fadderanmalan/static/sass/jobsignup.sass
+++ b/fadderanmalan/static/sass/jobsignup.sass
@@ -1,4 +1,5 @@
 @import mobile/m_jobsignup
+@import darkmode/d_jobsignup
 
 #filter-container
     display: flex
@@ -12,7 +13,7 @@
     padding: 0 0 0 15px
     height: 52px
 
-.filter-search
+.form-control.filter-search
     max-width: 250px
     padding: 26px 15px
     letter-spacing: 1px
