--- a/fadderanmalan/templates/jobsignup.html
+++ b/fadderanmalan/templates/jobsignup.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="{% sass_src 'sass/jobsignup.sass' %}">
     <link rel="stylesheet" href="{% sass_src 'sass/components/job.sass' %}">
     <link rel="stylesheet" href="{% sass_src 'sass/components/filter_checkbox.sass' %}">
+    <link rel="stylesheet" href="{% sass_src 'sass/form.sass' %}">
 {% endblock head %}
 
 {% block scripts %}
