--- a/fadderjobb/static/sass/mobile/m_form.sass
+++ b/fadderjobb/static/sass/mobile/m_form.sass
@@ -11,7 +11,8 @@ body.mobile
                 max-width: 100vw
 
         label
-            margin: 0 auto
+            display: block
+            text-align: center
 
         textarea
             font-size: 130%
@@ -20,3 +21,4 @@ body.mobile
             text-align: left
             min-width: 80vw
             max-width: 80vw
+            margin: 0 auto 40px
