Add hamburger animation to mobile menu + small restyling

--- a/fadderjobb/static/sass/darkmode/d_base.sass
+++ b/fadderjobb/static/sass/darkmode/d_base.sass
@@ -12,11 +12,11 @@ body.darkmode
     a:before
         background-color: white
 
-    .navbar-brand:hover
-        box-shadow: 0 1px 3px 0 #eee
-
     .navbar-toggler
         border-color: white
 
     .divider
         border: 2px solid white
+
+    .ham .line
+        stroke: white
