--- a/fadderanmalan/static/sass/components/d_job.sass
+++ b/fadderanmalan/static/sass/components/d_job.sass
@@ -1,3 +1,5 @@
 body.darkmode
-    .job:hover
-        box-shadow: 0 1px 3px 0 #eee
+    .job
+        border-color: white
+        &:hover
+            box-shadow: none
