--- a/fadderanmalan/static/sass/components/job.sass
+++ b/fadderanmalan/static/sass/components/job.sass
@@ -13,6 +13,7 @@
     padding: 10px
     transition: all .2s !important
     border-radius: 4px
+    border: 2px solid black
     &:hover
         text-decoration: none
         box-shadow: 0 1px 3px 0 #222
