--- a/fadderjobb/static/sass/mobile/m_base.sass
+++ b/fadderjobb/static/sass/mobile/m_base.sass
@@ -16,17 +16,16 @@ body.mobile
         height: 90px
         font-size: 300%
 
-
         border-radius: 10px
-        border: 2px solid black
+        border: 4px solid black
+        background-color: transparent
 
         transition: background-color .1s linear
 
+        padding: 2px 12px
+
         &:focus
             outline: none
-
-        &[aria-expanded=false]
-            background-color: transparent
 
         .fas, .far
             color: black
