Move out user linking to separate component

--- a/accounts/templates/accounts/edit_profile.html
+++ b/accounts/templates/accounts/edit_profile.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static from staticfiles %}
 {% load sass_tags %}
-{% load components %}
+{% load fadderanmalan_components %}
 
 {% block title %}Redigera min profil - {% endblock title %}
 
