--- a/fadderjobb/static/sass/base.sass
+++ b/fadderjobb/static/sass/base.sass
@@ -18,6 +18,25 @@ nav.navbar
 
     transition: all .1s linear
 
+.navbar-toggler
+    width: 120px
+    height: 90px
+    font-size: 300%
+
+    border-radius: 10px
+    border: none
+    background-color: transparent
+
+    transition: background-color .1s linear
+
+    padding: 2px 12px
+
+    &:focus
+        outline: none
+
+    .fas, .far
+        color: black
+
 .nav-link
     margin: 0 5px
     &:first-child
