--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 {% load static from staticfiles %}
 {% load startswith from filters %}
 {% load sass_tags %}
-{% load components %}
+{% load fadderanmalan_components %}
 
 <!DOCTYPE html>
 <!--suppress HtmlUnknownTarget -->
