--- a/fadderjobb/static/sass/darkmode/d_base.sass
+++ b/fadderjobb/static/sass/darkmode/d_base.sass
@@ -3,7 +3,7 @@
 body.darkmode
     background-color: $darkmode-background
 
-    h1, h2, h3, h4, h5, p, a, th, td, span, small, i, label, .fas, .far
+    h1, h2, h3, h4, h5, p, a, th, td, div, span, small, i, label, .fas, .far
         color: white !important
 
     nav
@@ -12,11 +12,8 @@ body.darkmode
     a:before
         background-color: white
 
-    .navbar-toggler
+    *
         border-color: white
-
-    .divider
-        border: 2px solid white
 
     .ham .line
         stroke: white
