--- a/accounts/static/sass/components/userlink.sass
+++ b/accounts/static/sass/components/userlink.sass
@@ -2,5 +2,17 @@
 @import m_userlink
 
 .userlink
-    display: block
-    margin: 20px
+    display: inline-block
+    margin: 10px 5px 15px 0
+    padding: 10px
+
+    border: 2px solid black
+    border-radius: 5px
+
+    transition: all .1s linear
+
+    &:hover
+        box-shadow: 0 1px 3px 0 #222
+
+.userlink-profile-icon
+    margin-right: 10px
