--- a/accounts/templates/components/userlink.html
+++ b/accounts/templates/components/userlink.html
@@ -1,3 +1,3 @@
 <a href="{% url 'accounts:profile' user.username %}" class="userlink nounderline">
-    {{ user.username.upper }}
+    <i class="fas fa-user userlink-profile-icon"></i>{{ user.username.upper }} - {{ user.points }}p
 </a>
