--- a/fadderanmalan/templates/jobdetails.html
+++ b/fadderanmalan/templates/jobdetails.html
@@ -15,7 +15,7 @@
 
 {% block content %}
     <div class="jobdetail">
-        {% if user.is_staff %}
+        {% if request.user.is_staff %}
             <a href="{% url 'admin:fadderanmalan_job_change' job.id %}" target="_blank">Redigera jobb</a>
         {% endif %}
         <div class="header">
