Move border-changes for darkmode to base

--- a/fadderanmalan/static/sass/topchart.sass
+++ b/fadderanmalan/static/sass/topchart.sass
@@ -8,8 +8,8 @@
 
     .userlink
         margin: 0
-        border-bottom-left-radius: 0
-        border-top-left-radius: 0
+        border-bottom-left-radius: 0 !important
+        border-top-left-radius: 0 !important
 
 .topchart-counter
     padding: 10px
@@ -21,5 +21,5 @@
 
     border: 2px solid black
     border-right: none
-    border-top-left-radius: 5px
-    border-bottom-left-radius: 5px
+    border-top-right-radius: 0 !important
+    border-bottom-right-radius: 0 !important
