--- a/fadderjobb/static/sass/base.sass
+++ b/fadderjobb/static/sass/base.sass
@@ -4,6 +4,11 @@
 body
     color: #333
 
+.messages .alert
+    color: black !important
+    border: none
+    border-radius: 0
+
 nav.navbar
     border: none
 
