--- a/fadderjobb/static/sass/darkmode/d_form.sass
+++ b/fadderjobb/static/sass/darkmode/d_form.sass
@@ -5,3 +5,6 @@ body.darkmode
         input, input:focus, textarea, textarea:focus
             background-color: $darkmode-input-background
             color: white
+
+        .dropdown-item
+            color: black !important
