--- a/fadderjobb/static/sass/form.sass
+++ b/fadderjobb/static/sass/form.sass
@@ -16,6 +16,12 @@ textarea
 
 .form-control
     max-width: 400px
+    border: none
+    border-radius: 0
+
+.dropdown-toggle
+    border: none
+    border-radius: 0
 
 .errorlist
     list-style-type: none
