--- a/fadderjobb/static/sass/mobile/m_base.sass
+++ b/fadderjobb/static/sass/mobile/m_base.sass
@@ -1,6 +1,10 @@
 body.mobile
     font-size: 200%
 
+    *
+        border-width: 4px
+        border-radius: 8px
+
     .nav-item
         text-align: center
         justify-content: center
