--- a/fadderjobb/static/sass/mobile/m_form.sass
+++ b/fadderjobb/static/sass/mobile/m_form.sass
@@ -22,3 +22,6 @@ body.mobile
             min-width: 80vw
             max-width: 80vw
             margin: 0 auto 40px
+
+        .errorlist
+            text-align: center
