Mostly changes to userlink

--- a/accounts/static/sass/components/userlink.sass
+++ b/accounts/static/sass/components/userlink.sass
@@ -16,3 +16,8 @@
 
 .userlink-profile-icon
     margin-right: 10px
+
+.userlink-separator
+    display: inline-block
+    transform: scale(2) translateY(-1px)
+    margin: 0 2px
