--- a/fadderanmalan/static/sass/jobsignup.sass
+++ b/fadderanmalan/static/sass/jobsignup.sass
@@ -46,7 +46,7 @@
     width: 100%
     display: block
 
-    transition: all .2s linear
+    transition: all .05s linear
 
     &:not(.show)
         opacity: 0
@@ -99,3 +99,5 @@
     background-color: #222
     position: relative
     z-index: 10
+
+    border: 2px solid white
