--- a/fadderjobb/static/sass/base.sass
+++ b/fadderjobb/static/sass/base.sass
@@ -49,7 +49,7 @@ nav.navbar
 
 span.nav-link:hover
     text-decoration: none
-    color: rgba(0, 0, 0, .3) !important
+    color: inherit !important
     cursor: default
 
 form
