--- a/fadderjobb/static/sass/darkmode/d_form.sass
+++ b/fadderjobb/static/sass/darkmode/d_form.sass
@@ -8,3 +8,6 @@ body.darkmode
 
         .dropdown-item
             color: black !important
+
+            &:hover
+                color: white !important
