--- a/fadderanmalan/static/sass/topchart.sass
+++ b/fadderanmalan/static/sass/topchart.sass
@@ -21,5 +21,6 @@
 
     border: 2px solid black
     border-right: none
+    border-radius: 4px
     border-top-right-radius: 0 !important
     border-bottom-right-radius: 0 !important
