Set viewport width for mobile devices + update readme

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="theme-color" content="{% if request.COOKIES.darkmode == "true" %}#000000{% else %}#ffffff{% endif %}">
+    <meta name="viewport" content="width=750px">
 
     <title>{% block title %}{% endblock title %}Fadderjobb</title>
 
