--- a/fadderanmalan/static/sass/topchart.sass
+++ b/fadderanmalan/static/sass/topchart.sass
@@ -3,6 +3,7 @@
 .topchart
     display: flex
     flex-direction: row
+    flex-wrap: wrap
 
     align-items: flex-start
 
@@ -15,6 +16,7 @@
     padding: 10px
 
     margin-left: 15px
+    margin-bottom: 10px
     font-weight: bold
 
     display: inline-block
