Add dequeue functionality to admin-interface

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="theme-color" content="{% if request.COOKIES.darkmode == "true" %}#000000{% else %}#ffffff{% endif %}">
-    <meta name="viewport" content="width=750px">
+    <meta name="viewport" content="width=750px, height=device-height">
 
     <title>{% block title %}{% endblock title %}Fadderjobb</title>
 
