Add functionality for Job.hidden

--- a/fadderanmalan/templates/components/job.html
+++ b/fadderanmalan/templates/components/job.html
@@ -25,7 +25,7 @@
                    data-toggle="tooltip" data-placement="left" title="Jobbet är fullt">
                 </i>{{ " " }}
             {% endif %}
-            {% if job.locked %}
+            {% if job.is_locked %}
                 <i class="fas fa-lock"
                    data-toggle="tooltip" data-placement="left" title="Jobbet är låst">
                 </i>{{ " " }}
