--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -31,6 +31,16 @@
                     <td><a href="{% url 'admin:fadderanmalan_type_add' %}" class="addlink">Add</a></td>
                     <td><a href="{% url 'admin:fadderanmalan_type_changelist' %}" class="changelink">Change</a></td>
                 </tr>
+                <tr>
+                    <th scope="row"><a href="{% url 'admin:fadderanmalan_equipment_changelist' %}">Equipments</a></th>
+                    <td><a href="{% url 'admin:fadderanmalan_equipment_add' %}" class="addlink">Add</a></td>
+                    <td><a href="{% url 'admin:fadderanmalan_equipment_changelist' %}" class="changelink">Change</a></td>
+                </tr>
+                <tr>
+                    <th scope="row"><a href="{% url 'admin:fadderanmalan_equipmentownership_changelist' %}">Equipment ownerships</a></th>
+                    <td><a href="{% url 'admin:fadderanmalan_equipmentownership_add' %}" class="addlink">Add</a></td>
+                    <td><a href="{% url 'admin:fadderanmalan_equipmentownership_changelist' %}" class="changelink">Change</a></td>
+                </tr>
                 </tbody>
             </table>
         </div>
