Add EquipmentOwnership as inline to User-model, change some filters, add help_text to change_list.

--- a/fadderanmalan/templates/components/job.html
+++ b/fadderanmalan/templates/components/job.html
@@ -30,7 +30,7 @@
                    data-toggle="tooltip" data-placement="left" title="Jobbet är låst">
                 </i>{{ " " }}
             {% endif %}
-            {{ job.users.count }}/{{ job.slots }}
+            {{ job.users.count }}/{{ job.slots }} - {{ job.points }}p
         </div>
     </div>
     <div class="job-body">{{ job.short_desc }}</div>
