--- a/fadderanmalan/templates/components/equipment_ownership.html
+++ b/fadderanmalan/templates/components/equipment_ownership.html
@@ -1,5 +1,5 @@
 <div class="equipment_ownership">
-    <h4>{{ eo.name }}</h4>
+    <h4>{{ eo.equipment.name }}</h4>
     <p>Utgiven: {{ eo.dispensed_at.date|date:"j b" }}</p>
     <p>{{ eo.equipment.description }}</p>
 </div>
