--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,10 @@
 <script src="{% static 'js/index.js' %}"></script>
 {% block scripts %}{% endblock scripts %}
 
+{% if DEBUG %}
+    <div style="background: #d32f2f; color: white; text-align: center;">DEBUG</div>
+{% endif %}
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand nounderline" href="/">Fadderjobb</a>
     <button class="navbar-toggler hamburger hamburger--collapse" type="button" data-toggle="collapse"
