--- a/accounts/static/sass/components/userlink.sass
+++ b/accounts/static/sass/components/userlink.sass
@@ -3,7 +3,7 @@
 
 .userlink
     display: inline-block
-    margin: 10px 5px 15px 0
+    margin: 8px 5px
     padding: 10px
 
     border: 2px solid black
