--- a/fadderanmalan/templates/admin/fadderanmalan/job/change_form.html
+++ b/fadderanmalan/templates/admin/fadderanmalan/job/change_form.html
@@ -3,6 +3,7 @@
 {% block submit_buttons_bottom %}
     <div class="submit-row">
         <input type="submit" value="Dequeue" name="_dequeue">
+        <input type="submit" value="Send info mail" name="_infomail">
     </div>
     {{ block.super }}
 {% endblock %}
