--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -23,7 +23,7 @@
                        data-placement="bottom" title="Redigera min profil"></i>
                 </a>
             {% else %}
-                <a href="{% url 'fadderanmalan:trade' user.username %}" class="nounderline">
+                <a href="{% url 'trade:start' user.username %}" class="nounderline">
                     <i class="fas fa-sync-alt" data-toggle="tooltip"
                        data-placement="bottom" title="Byt jobb"></i>
                 </a>
