--- a/trade/templates/trade/index.html
+++ b/trade/templates/trade/index.html
@@ -13,7 +13,7 @@
 {% block content %}
     <h1>Byt jobb med {{ receiver.username }}</h1>
 
-    <form action="{% url 'fadderanmalan:trade' receiver_username=receiver.username %}" method="post">
+    <form action="{% url 'trade:start' receiver_username=receiver.username %}" method="post">
         {% csrf_token %}
         {{ trade_form }}
         <input type="submit" value="Skicka bytesförfrågan">
