Error handling, add Trade to /admin & start work on /trade/complete

--- a/trade/templates/trade/start.html
+++ b/trade/templates/trade/start.html
@@ -6,7 +6,7 @@
 {% block title %}Byt jobb med {{ target.username }} - {% endblock title %}
 
 {% block head %}
-    <link rel="stylesheet" href="{% sass_src 'sass/trade.sass' %}">
+    <link rel="stylesheet" href="{% sass_src 'sass/trade_start.sass' %}">
     <link rel="stylesheet" href="{% sass_src 'sass/components/job.sass' %}">
 {% endblock head %}
 
