Add admin user impersonation

--- a/fadderanmalan/templates/jobdetails.html
+++ b/fadderanmalan/templates/jobdetails.html
@@ -92,7 +92,7 @@
             {% endif %}
         </table>
 
-        {% if user.is_authenticated and user.can_register %}
+        {% if user.can_register %}
             {% if registered_to_job %}  {# Registered #}
                 <h3>Avanmälan</h3>
                 {% if job.is_locked %}  {# Locked #}
