--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,10 @@
     <div style="background: #d32f2f; color: white; text-align: center;">DEBUG</div>
 {% endif %}
 
+{% if is_impersonated_session %}
+    <div style="background: #d32f2f; color: white; text-align: center;">IMPERSONATED</div>
+{% endif %}
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand nounderline" href="/">Fadderjobb</a>
     <button class="navbar-toggler hamburger hamburger--collapse" type="button" data-toggle="collapse"
@@ -85,12 +89,21 @@
                         Min profil ({{ request.user.username }})
                     </a>
                     <span class="nav-link">/</span>
-                    <form id="logout-form" action="{% url 'accounts:logout' %}" method="post">
-                        <a class="nav-link" onclick="document.getElementById('logout-form').submit()" href="#">
-                            Logga ut
-                        </a>
-                        {% csrf_token %}
-                    </form>
+                    {% if is_impersonated_session %}
+                        <form id="restore-form" action="{% url 'accounts:restore' %}" method="post">
+                            <a class="nav-link" onclick="document.getElementById('restore-form').submit()" href="#">
+                                Återgå
+                            </a>
+                            {% csrf_token %}
+                        </form>
+                    {% else %}
+                        <form id="logout-form" action="{% url 'accounts:logout' %}" method="post">
+                            <a class="nav-link" onclick="document.getElementById('logout-form').submit()" href="#">
+                                Logga ut
+                            </a>
+                            {% csrf_token %}
+                        </form>
+                    {% endif %}
                 {% else %}
                     <a href="{% url 'accounts:login' %}"
                        class="nav-link{% if request.resolver_match.view_name|startswith:'accounts:login' %} active{% endif %}">
