Trades can now be accepted (ish)

--- a/fadderjobb/static/sass/mobile/m_base.sass
+++ b/fadderjobb/static/sass/mobile/m_base.sass
@@ -22,8 +22,16 @@ body.mobile
         font-size: 130%
         padding: 1.5rem 2rem
 
+    h1
+        font-size: 1.6em
+
+    h2
+        font-size: 1.4em
+
+    h3
+        font-size: 1.2em
+
     h1, h2, h3
-        font-size: 150%
         margin-top: 2rem
         margin-bottom: 1rem
 
