Accepting a trade now switches jobs

--- a/trade/static/sass/trade_complete.sass
+++ b/trade/static/sass/trade_complete.sass
@@ -1,8 +1,8 @@
 @import mobile/m_trade_complete
 
-.trade
-    display: flex
-    flex-wrap: wrap
+
+.trade-received
+    margin: 40px 0
 
 .trade-job
     width: 500px
